# rtiaw

./: Cargo.toml  LICENSE.md  README.md
src/: cli.yml  main.rs
src/aabb/: aabb.rs  mod.rs
src/camera/: camera.rs
src/color/: color.rs  mod.rs
src/image/: image.rs  mod.rs  ppm.rs
src/material/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/object/: mod.rs  object.rs
src/object/bvh/: bvh.rs  mod.rs
src/object/object_list/: mod.rs  object_list.rs
src/object/sphere/: sphere.rs
src/ray/: mod.rs  ray.rs
src/scene/: mod.rs  scene.rs
src/vec3/: vec3.rs
