[package]
name = "rtiaw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
crossbeam = "0.8.0"
itertools = "0.10.0"
num_cpus = "1.13.0"
rand = "0.8.3"
